src/test/ui/parser/use-as-where-use-ends-with-mod-sep.stderr
error: expected identifier, found keyword `as`
  --> $DIR/use-as-where-use-ends-with-mod-sep.rs:3:16
   |
LL | use std::any:: as foo; //~ ERROR expected identifier, found keyword `as`
   |                ^^ expected identifier, found keyword

error: expected one of `::`, `;`, or `as`, found `foo`
  --> $DIR/use-as-where-use-ends-with-mod-sep.rs:3:19
   |
LL | use std::any:: as foo; //~ ERROR expected identifier, found keyword `as`
   |                   ^^^ expected one of `::`, `;`, or `as` here

error: aborting due to 2 previous errors

